# sycl

./: LICENSE  README.md
examples/: CMakeLists.txt
examples/cmake/Modules/: FindComputeCpp.cmake
examples/custom_device_selector/: CMakeLists.txt  custom_device_selector.cpp
examples/dotproduct/: CMakeLists.txt  dotproduct.cpp
examples/example1/: Makefile  example1.cpp
examples/example2/: Makefile
examples/example3/: Makefile
examples/example4/: Makefile  example4.cpp
examples/example5/: Makefile  example5.cpp
examples/exceptions/: CMakeLists.txt  Makefile  exceptions.cpp
examples/get_device_queue/: CMakeLists.txt  get_device_queue.cpp
examples/madd2/: CMakeLists.txt  madd2.cpp  madd2.hpp
examples/madd3/: CMakeLists.txt  madd3.cpp
examples/parfor_encrypt/: CMakeLists.txt  Makefile  parfor_encrypt.cpp
examples/reduce_sample/: CMakeLists.txt  reduce_sample.cpp
examples/reduce_sum/: CMakeLists.txt  Makefile  reduce_sum.cpp
examples/simple_vec_add/: CMakeLists.txt  Makefile  simple_vec_add.cpp
examples/template_func/: CMakeLists.txt  Makefile  template_func.cpp
examples/vecdotproduct/: CMakeLists.txt  dotproduct.cpp
scripts/: make_for_intel.sh  make_for_nvidia.sh
sycl2020/select_device/: test1.cpp  test2.cpp
sycl2020/usm/dependency/: test1.cpp  test2.cpp  test3.cpp  test4.cpp
sycl2020/usm/simple/: make.bash  test1.cpp  test1_alt1.cpp  test1_alt2.cpp  test2.cpp
